--- a/style.css
+++ b/style.css
@@ -38,3 +38,16 @@ background-color: rgb(6, 84, 162);
     color: #333;
     pointer-events: none;
 }
+
+.buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    height: 150px;
+    width: 30%;
+    border-radius: 20px;
+    margin-left: 35%;
+    margin-bottom: 200px;
+
+}
